src/OpenCvSharp.CPlusPlus/PInvoke/ml/NativeMethods_ml_CvBoostTree.cs

using System;
using System.Runtime.InteropServices;

#pragma warning disable 1591

namespace OpenCvSharp.CPlusPlus
{
    static partial class NativeMethods
    {
        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ml_CvBoostTree_new();
        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ml_CvBoostTree_delete(IntPtr obj);

        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ml_CvBoostTree_train(
            IntPtr obj, IntPtr trainData, IntPtr subsampleIdx, IntPtr ensemble);
        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ml_CvBoostTree_scale(IntPtr obj, double s);
        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ml_CvBoostTree_read(
            IntPtr obj, IntPtr fs, IntPtr node, IntPtr ensemble, IntPtr data);
        [DllImport(DllExtern, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ml_CvBoostTree_clear(IntPtr obj);
    }
}